--- a/_posts/2016-03-05-emerald.markdown
+++ b/_posts/2016-03-05-emerald.markdown
@@ -17,7 +17,7 @@ _This is one post in a series about programming models and languages for distrib
 </ul>
 <h2 id="commentary">Commentary</h2>
 <p>The Eden Programming Language (EPL) was a distributed programming language developed on top of Concurrent Euclid <span class="citation">Holt (1982)</span> that extended the existing language with support for remote method invocations. However, this support was far from ideal: incoming method invocation requests would have to be received and dispatched by a single thread while the programmer making the request would have to manually inspect error codes to ensure that the remove invocation succeeded.</p>
-<p>Eden also provided location-independent mobile objects, but the implementation was extremely costly. In the implementation, each object was a full Unix process that could send and receive messages to each other: these messages would be sent using interprocess communication if located on the same node, resulting on latencies in the milliseconds. Eden additionally implemented a “kernel” object for dispatching messages between processes, resulting in a single message between two objects on the same system taking over 100 milliseconds, the cost of two context switches at the time. To make applications developed in EPL more efficient, application developers would use a lightweight heap-based object implemented in Concurrent Euclid (that, appeared as a single Eden object consuming a single Unix process) for objects that needed to communicate, but were located on the same machine, that would communicate through shared memory. Obviously, the next problem follows naturally: the single abstraction provided resulted in extremely slow applications, so, a new abstraction was provided to compensate, and the user is now left having to program with two object models.</p>
+<p>Eden also provided location-independent mobile objects, but the implementation was extremely costly. In the implementation, each object was a full Unix process that could send and receive messages to each other: these messages would be sent using interprocess communication if located on the same node, resulting in latencies in the milliseconds. Eden additionally implemented a “kernel” object for dispatching messages between processes, resulting in a single message between two objects on the same system taking over 100 milliseconds, the cost of two context switches at the time. To make applications developed in EPL more efficient, application developers would use a lightweight heap-based object implemented in Concurrent Euclid (that, appeared as a single Eden object consuming a single Unix process) for objects that needed to communicate, but were located on the same machine, that would communicate through shared memory. Obviously, the next problem follows naturally: the single abstraction provided resulted in extremely slow applications, so, a new abstraction was provided to compensate, and the user is now left having to program with two object models.</p>
 <p>In a legendary memo entitled “Getting to Oz”, the language designers of Eden and the soon-to-be language designers began discussions to improve the design of Eden. This new language would be entitled “Emerald”<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>.</p>
 <p>We enumerate here the list of specific goals the language designers had for Emerald, outside of the general improvements they wanted to make on Eden.</p>
 <ol>
@@ -33,16 +33,16 @@ _This is one post in a series about programming models and languages for distrib
 <p>The technical innovations for Emerald, a system that was under primary development from 1983 to 1987 (and later continued by various graduate students) are numerous. We highlight a few of the most important technical innovations below:</p>
 <ol>
 <li><p>Emerald presented a <em>single object model</em> for both distributed and local objects. Each object has a globally unique identifier, internal state, and a set of methods that could be invoked. These objects could run in their own process, if necessary, or not. (In fact, objects encapsulated their processes and launched them on object invocation.)</p></li>
-<li><p>Objects could exist with different types of implementations in this unified model: <em>global</em> objects, or objects that could be accessed either locally or remote; <em>local</em> objects, that were optimized for local access only, and determined as best as possible at compile time; and <em>direct</em>, or objects that represented primitive types.</p></li>
-<li><p>Emerald was a statically-typed language, that had dynamic type checking for objects that were received over the wire. This was achieved using a notion of <em>protocols</em> and <em>conformity</em>-based typing. Dynamic type checking would be performed by ensuring types at runtime were compatible based on their interfaces. This was done by forming a type lattice and computing both the <em>join</em> and <em>meet</em> based on the <em>abstract</em>, or compile-time provided type, and the <em>concrete</em> implementation provided at runtime.</p></li>
-<li><p>Emerald’s type system also provided <em>capabilities</em>, where types could either be <em>restricted</em> to a higher type in the type lattice, or <em>viewed</em> at a lower type in the type lattice.</p></li>
-<li><p>Synchronization between processes in Emerald was achieved using <em>monitors</em> to achieve mutual exclusion with condition signaling <span class="citation">Hoare (1974)</span>.</p></li>
-<li><p>Mobility in Emerald was provided using explicit placement primitives. Processes could be <em>moved</em> to a new location, <em>fixed</em> at a precise location, and <em>located</em>. Emerald also provided two new parameter evaluation modes based on mobility: <em>call-by-move</em>, or move the parameter object to the invocation location, and <em>call-by-visit</em>, by remote access of the parameter object from the invocation’s location.</p></li>
-<li><p>Errors related to network availability were not considered exceptions, and special notation for handling these errors was provided to the programmer.</p></li>
+<li><p>Objects could exist with different implementations in this unified model: <em>global</em> objects, or objects that could be accessed either locally or remote; <em>local</em> objects, that were optimized for local access only as determined as best as possible at compile time; and <em>direct</em>, or objects that represented primitive types such as integers, booleans, etc.</p></li>
+<li><p>Emerald was a statically-typed language, that had dynamic type checking for objects that were received over the wire. This was achieved using a notion of <em>protocols</em> and <em>conformity</em>-based typing. Dynamic type checking would be performed by ensuring types at runtime were compatible based on their interfaces. This was done by forming a type lattice and computing both the <em>join</em> and <em>meet</em> based on the <em>abstract</em>, or the compile-time provided type, and the <em>concrete</em> implementation that were provided at runtime.</p></li>
+<li><p>Emerald’s type system also provided <em>capabilities</em>, where types could either be <em>restrict</em>ed to a higher type in the type lattice, or <em>view</em>ed at a lower type in the type lattice.</p></li>
+<li><p>Synchronization between processes in Emerald was achieved using <em>monitors</em> to achieve mutual exclusion with condition signaling and waiting <span class="citation">Hoare (1974)</span>.</p></li>
+<li><p>Mobility in Emerald was provided using explicit placement primitives. Processes could be <em>moved</em> to a new location, <em>fix</em>ed at a precise location, and <em>locate</em>d. Emerald also provided two new parameter evaluation modes based on mobility: <em>call-by-move</em>, or move the parameter object to the invocation location, and <em>call-by-visit</em>, by remote access of the parameter object from the invocation’s location.</p></li>
+<li><p>Errors related to network availability were not considered exceptions; therefore special notation for handling these errors was provided to the programmer.</p></li>
 </ol>
-<p>Emerald (and Eden’s) influence on programming languages throughout the history of programming languages is paramount. Emerald specifically innovated in two main areas: distributed objects and advanced type systems, which is interesting because the innovations in type systems were only done to support the development of distributed objects in the Emerald system.</p>
+<p>Emerald (and Eden’s) influence on programming languages throughout the history of programming languages is paramount. Emerald specifically innovated in two main areas: distributed objects and type systems, which is interesting because the innovations in type systems were only done to support the development of distributed objects in the Emerald system.</p>
 <p>The idea of type <em>conformity</em> over a type lattice with both <em>concrete</em> and <em>abstract</em> types influenced the further development of <em>protocols</em>, mechanisms to specify the external behavior of an objects, in the ANSI 1997 Smalltalk standard.</p>
-<p>Developers of the Modula-3 Network Objects <span class="citation">Birrell et al. (1993)</span> system took what they felt was the most essential and the best of both the Emerald and SOS systems. This system forewent the mobility of objects in favor of marshalling. In the author’s own words:</p>
+<p>Developers of the Modula-3 Network Objects <span class="citation">Birrell et al. (1993)</span> system took what they felt was the most essential and the best of both the Emerald and SOS <span class="citation">Shapiro et al. (1989)</span> systems. This system forewent the mobility of objects in favor of marshalling. In the author’s own words:</p>
 <blockquote>
 <p>“We believe it is better to provide powerful marshaling than object mobility. The two facilities are similar, because both of them allow the programmer the option of communicating objects by reference or by copying. Either facility can be used to distribute data and computation as needed by applications. Object mobility offers slightly more flexibility, because the same object can be either sent by reference or moved; while with our system, network objects are always sent by reference and other objects are always sent by copying. However, this extra flexibility doesn’t seem to us to be worth the substantial increase in complexity of mobile objects.”</p>
 </blockquote>
@@ -84,6 +84,9 @@ _This is one post in a series about programming models and languages for distrib
 </div>
 <div id="ref-SPE:SPE4380210107">
 <p>Raj, Rajendra K., Ewan Tempero, Henry M. Levy, Andrew P. Black, Norman C. Hutchinson, and Eric Jul. 1991. “Emerald: A General-Purpose Programming Language.” <em>Software: Practice and Experience</em> 21 (1). John Wiley &amp; Sons, Ltd.: 91–118. doi:<a href="https://doi.org/10.1002/spe.4380210107">10.1002/spe.4380210107</a>.</p>
+</div>
+<div id="ref-shapiro1989sos">
+<p>Shapiro, Marc, Yvon Gourhant, Sabine Habert, Laurence Mosseri, Michel Ruffin, and Celine Valot. 1989. “SOS: An Object-Oriented Operating System―-Assessment and Perspectives.” <em>Computing Systems</em> 2 (4): 287–338.</p>
 </div>
 </div>
 <div class="footnotes">
