--- a/_posts/2016-03-05-emerald.markdown
+++ b/_posts/2016-03-05-emerald.markdown
@@ -14,7 +14,10 @@ _This is one post in a series about programming models and languages for distrib
 <li><p><em>Distribution and Abstract Types in Emerald</em>, A. Black and N. Hutchinson and E. Jul and H. Levy and L. Carter, IEEE 1987 <span class="citation">A. Black et al. (1987)</span>.</p></li>
 <li><p><em>Emerald: A general-purpose programming language</em>, Raj, Rajendra K. and Tempero, Ewan and Levy, Henry M. and Black, Andrew P. and Hutchinson, Norman C. and Jul, Eric, Software Practice and Experience, 1991 <span class="citation">Raj et al. (1991)</span>.</p></li>
 <li><p><em>Object Structure in the Emerald System</em>, Black, Andrew and Hutchinson, Norman and Jul, Eric and Levy, Henry, OOPLSA ’86 <span class="citation">Andrew Black et al. (1986)</span>.</p></li>
+<li><p><em>Typechecking Polymorphism in Emerald</em>, Black, Andrew P. and Hutchinson, Norman, Technical Report CRL 91/1, Digital Cambridge Research Laboratory, 1991.</p></li>
+<li><p><em>Getting to Oz</em>, Hank Levy, Norm Hutchinson, and Eric Jul, April 1984.</p></li>
 </ul>
+<p>These texts, and more, are available from the languages website, <a href="http://www.emeraldprogramminglanguage.org" class="uri">http://www.emeraldprogramminglanguage.org</a>.</p>
 <h2 id="commentary">Commentary</h2>
 <p>The Eden Programming Language (EPL) was a distributed programming language developed on top of Concurrent Euclid <span class="citation">Holt (1982)</span> that extended the existing language with support for remote method invocations. However, this support was far from ideal: incoming method invocation requests would have to be received and dispatched by a single thread while the programmer making the request would have to manually inspect error codes to ensure that the remove invocation succeeded.</p>
 <p>Eden also provided location-independent mobile objects, but the implementation was extremely costly. In the implementation, each object was a full Unix process that could send and receive messages to each other: these messages would be sent using interprocess communication if located on the same node, resulting in latencies in the milliseconds. Eden additionally implemented a “kernel” object for dispatching messages between processes, resulting in a single message between two objects on the same system taking over 100 milliseconds, the cost of two context switches at the time. To make applications developed in EPL more efficient, application developers would use a lightweight heap-based object implemented in Concurrent Euclid (that, appeared as a single Eden object consuming a single Unix process) for objects that needed to communicate, but were located on the same machine, that would communicate through shared memory. Obviously, the next problem follows naturally: the single abstraction provided resulted in extremely slow applications, so, a new abstraction was provided to compensate, and the user is now left having to program with two object models.</p>
@@ -37,7 +40,7 @@ _This is one post in a series about programming models and languages for distrib
 <li><p>Emerald was a statically-typed language, that had dynamic type checking for objects that were received over the wire. This was achieved using a notion of <em>protocols</em> and <em>conformity</em>-based typing. Dynamic type checking would be performed by ensuring types at runtime were compatible based on their interfaces. This was done by forming a type lattice and computing both the <em>join</em> and <em>meet</em> based on the <em>abstract</em>, or the compile-time provided type, and the <em>concrete</em> implementation that were provided at runtime.</p></li>
 <li><p>Emerald’s type system also provided <em>capabilities</em>, where types could either be <em>restrict</em>ed to a higher type in the type lattice, or <em>view</em>ed at a lower type in the type lattice.</p></li>
 <li><p>Synchronization between processes in Emerald was achieved using <em>monitors</em> to achieve mutual exclusion with condition signaling and waiting <span class="citation">Hoare (1974)</span>.</p></li>
-<li><p>Mobility in Emerald was provided using explicit placement primitives. Processes could be <em>moved</em> to a new location, <em>fix</em>ed at a precise location, and <em>locate</em>d. Emerald also provided two new parameter evaluation modes based on mobility: <em>call-by-move</em>, or move the parameter object to the invocation location, and <em>call-by-visit</em>, by remote access of the parameter object from the invocation’s location.</p></li>
+<li><p>Mobility in Emerald was provided using explicit placement primitives. Processes could be <em>moved</em> to a new location, <em>fix</em>ed at a precise location, and <em>locate</em>d. Emerald also provided two new parameter evaluation modes based on mobility: <em>call-by-move</em><a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a>, or move the parameter object to the invocation location, and <em>call-by-visit</em>, by remote access of the parameter object from the invocation’s location. When objects were moved, the old placement would store a <em>forwarding address</em> that would be used to route messages forward; timestamps were used to detect routing loops and reference the most recent object and to avoid stable storage of the forwarding addresses, reliable broadcast was used to find lost pointers.</p></li>
 <li><p>Errors related to network availability were not considered exceptions; therefore special notation for handling these errors was provided to the programmer.</p></li>
 </ol>
 <p>Emerald (and Eden’s) influence on programming languages throughout the history of programming languages is paramount. Emerald specifically innovated in two main areas: distributed objects and type systems, which is interesting because the innovations in type systems were only done to support the development of distributed objects in the Emerald system.</p>
@@ -46,7 +49,7 @@ _This is one post in a series about programming models and languages for distrib
 <blockquote>
 <p>“We believe it is better to provide powerful marshaling than object mobility. The two facilities are similar, because both of them allow the programmer the option of communicating objects by reference or by copying. Either facility can be used to distribute data and computation as needed by applications. Object mobility offers slightly more flexibility, because the same object can be either sent by reference or moved; while with our system, network objects are always sent by reference and other objects are always sent by copying. However, this extra flexibility doesn’t seem to us to be worth the substantial increase in complexity of mobile objects.” <span class="citation">A. P. Black et al. (2007)</span></p>
 </blockquote>
-<p>Both Java’s RMI system and Jini (and their predecessor OMG’s CORBA) were influenced by Emerald as well, however not without a fierce discussion on the merits of distinguishing between remote and local method invocations, motivated by legendary technical report <span class="citation">Kendall et al. (1994)</span> by Sun Microsystems’ research division<a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a>.</p>
+<p>Both Java’s RMI system and Jini (and their predecessor OMG’s CORBA) were influenced by Emerald as well, however not without a fierce discussion on the merits of distinguishing between remote and local method invocations, motivated by legendary technical report <span class="citation">Kendall et al. (1994)</span> by Sun Microsystems’ research division<a href="#fn4" class="footnoteRef" id="fnref4"><sup>4</sup></a>.</p>
 <p>Jim Waldo, author of the aforementioned technical report, writes:</p>
 <blockquote>
 <p>“The RMI system (and later the Jini system) took many of the ideas pioneered in Emerald having to do with moving objects around the network. We introduced these ideas to allow us to deal with the problems found in systems like CORBA with type truncation (and which were dealt with in Network Objects by doing the closest-match); the result was that passing an object to a remote site resulted in passing [a copy of] exactly that object, including when necessary a copy of the code (made possible by Java bytecodes and the security mechanisms). This was exploited to some extent in the RMI world, and far more fully in the Jini world, making both of those systems more Emerald-like than we realized at the time.” <span class="citation">A. P. Black et al. (2007)</span></p>
@@ -95,8 +98,9 @@ _This is one post in a series about programming models and languages for distrib
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>As in, the Emerald city from “The Wonderful Wizard of Oz” referencing the original runtime for the Oz language “Toto”, and the nickname for Seattle<a href="#fnref1">↩</a></p></li>
+<li id="fn1"><p>As in, the Emerald city from “The Wonderful Wizard of Oz” referencing the original runtime for the Oz language “Toto”, and the nickname for Seattle.<a href="#fnref1">↩</a></p></li>
 <li id="fn2"><p>This dichotomy is presented as the <em>semantics</em> vs. the <em>locatics</em> of the language and the authors soon realized that one aspect of the language influenced both of these: failures.<a href="#fnref2">↩</a></p></li>
-<li id="fn3"><p>While we acknowledge the lineage here beginning with systems like Eden and Emerald, the majority of the criticisms of this technical report are targeted towards OMG’s CORBA system.<a href="#fnref3">↩</a></p></li>
+<li id="fn3"><p>This is a departure from systems like Argus that assumed all arguments were passed using call-by-value.<a href="#fnref3">↩</a></p></li>
+<li id="fn4"><p>While we acknowledge the lineage here beginning with systems like Eden and Emerald, the majority of the criticisms of this technical report are targeted towards OMG’s CORBA system.<a href="#fnref4">↩</a></p></li>
 </ol>
 </div>
