hermes spelling/typo fix
keep up the great work

--- a/_posts/2016-03-06-hermes.markdown
+++ b/_posts/2016-03-06-hermes.markdown
@@ -13,7 +13,7 @@ _This is one post in a series about programming models and languages for distrib
 <li><p><em>Implementing Location Independent Invocation</em>, Black, Andrew P and Artsy, Yeshayahu, IEEE Transactions on Parallel and Distributed Systems, 1990 <span class="citation">Andrew P Black and Artsy (1990)</span>.</p></li>
 </ul>
 <h2 id="commentary">Commentary</h2>
-<p>The general idea behind the Remote Procedure Call (RPC) paradigm is that it supports the transfer of control between address spaces. This paradigm allows programmers to write distributed applications without having to have knowledge of data representations or specific network protocols. Even though we know that there is quit a bit semantically different between remote and local calls <span class="citation">Kendall et al. (1994; Andrew P Black and Artsy 1990)</span>, the authors posit that the most fundamental difference is that of <em>binding</em>, or, how to figure out which address space to direct the call to.</p>
+<p>The general idea behind the Remote Procedure Call (RPC) paradigm is that it supports the transfer of control between address spaces. This paradigm allows programmers to write distributed applications without having to have knowledge of data representations or specific network protocols. Even though we know that there is quite a bit semantically different between remote and local calls <span class="citation">Kendall et al. (1994; Andrew P Black and Artsy 1990)</span>, the authors posit that the most fundamental difference is that of <em>binding</em>, or, how to figure out which address space to direct the call to.</p>
 <p>Traditionally, this has been done one of two ways: <em>default or automatic</em> binding where the RPC system makes the choice for the programmer; or <em>clerks</em>, an application specific module used for determining where the place the call. Default binding is fairly straightforward when there is only one server (or a group of semantically equivalent servers) to service the request. Clerks are fairly expensive, as one must be written for each type of request that needs to be serviced. If the service the RPC call is being made to is <em>pure</em>, for instance providing as fast Fourier transform as the authors put it, it is easy to choose automatic binding to select a server based on latency or availability. However, it is more challenging if services host application data. In their example, they consider an employee directory at Digital where application data is partitioned by company, and further by other groupings. If this mapping changes infrequently, a static mapping can be distributed to all of the clients; but, what happens if objects are mobile and this changes more frequently?</p>
 <p>One of the fantastic things about this paper is how forward thinking the design is for an actual industrial problem at Digital Equipment Corporation. I consider this one of the early versions of what we now call an “industry” research report, even though the system never was productized and the work was mainly performed by researchers in a lab. The application deals with expense vouchers for employees: each form needs to be filled in by an employee, approved by various managers, filed, and eventually results in a payout of actual cash. Each of the managers that are involved in approving the form may be located in different buildings in different continents. The application design assumes Digital’s global network of 36,000 machines and assumes that centralizing the records for each form in a centralized database is infeasible. Instead, the design is based on mobile objects for both data and code; forms should be able to move around the network as required by the application.</p>
 <p>The Hermes system is broken into three components: a naming service, a persistent store known as a collection of <em>storesites</em>, and routing layer that sits above the RPC system. Each object in the system is given a globally unique identifier, a source <em>storesite</em> and a <em>temporal address descriptor</em> or <em>tad</em>. The <em>temporal address descriptor</em> is a pair composed of a Hermes node identifier and a monotonically advancing timestamp: this pair represents where an object is located at a given time. This information is also persisted in the objects <em>storesite</em>. As objects move around the network, the <em>tad</em> is updated at the source node and 2PC used to coordinate a change with the record at the objects’s <em>storesite</em>.</p>
